@@ -1,4 +1,7 @@
 0.10:
+        * handle openid.delegate properly (was losing state because I'd
+	  put a URL parameter onto the wrong URL)
+	
 	* copy all signed parameters into POST args in dumb mode,
 	  not a static set (to be future-proof)
 	
